--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -11,6 +11,7 @@
 .page {
     width: 100%;
     height: 100%;
+    padding: 15px;
     overflow-y: auto;
 }
 
@@ -36,11 +37,9 @@
 .container {
     padding: 10px 5%;
     width: 100%;
+    min-height: 100%;
     will-change: contents;
-    height: 90%;
-    min-height: 566px;
     opacity: 0;
-    top : 5%;
     z-index : 1;
     transform-style: preserve-3d;
     animation: fadeIn 1s forwards;
