--- a/src/components/Sidebar/index.scss
+++ b/src/components/Sidebar/index.scss
@@ -127,6 +127,15 @@
 
 @media screen and (max-width : 640px){
     .nav-bar {
-        display: none;
+        opacity: 0;
+        position: absolute;
+        transform: translateX(100%);
+        transition: all .5s ease-in-out;
+        
+        &.active {
+            opacity: 1;
+            transform: translateX(0%);
+            
+        }
     }
 }
